general api features to support UI UX clients
